added icon of enemy and player

--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
   </head>
   <body>
     <section id="health-levels">
+      <img src="assets/images/sans.png" alt="" id="enemy" />
       <h2>MONSTER HEALTH</h2>
       <progress id="monster-health" max="100" value="100">100%</progress>
       <h2>PLAYER HEALTH<span id="bonus-life">1</span></h2>
       <progress id="player-health" max="100" value="100">100%</progress>
+      <img src="assets/images/back.png" alt="" id="player" />
     </section>
     <section id="controls">
       <button id="attack-btn">ATTACK</button>
