--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
   </head>
   <body>
     <section id="health-levels">
-      <img src="assets/images/sans.png" alt="" id="enemy" />
-      <h2>MONSTER HEALTH</h2>
+      <img
+        src="https://scontent.fmnl17-2.fna.fbcdn.net/v/t39.30808-6/299287345_546026520593964_3204641859123580481_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=5NZgCeZitGUAX8BA9aE&_nc_ht=scontent.fmnl17-2.fna&oh=00_AT_OEbs9GlHEFm87iUj7UOVF1V7wuhWKWax7YdQvwW9Cng&oe=633A886D"
+        alt=""
+        id="enemy"
+      />
+      <h2>CALOOCAN BOY HEALTH</h2>
       <progress id="monster-health" max="100" value="100">100%</progress>
       <h2>PLAYER HEALTH<span id="bonus-life">1</span></h2>
       <progress id="player-health" max="100" value="100">100%</progress>
